objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Added_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the check box is &quot;Checked&quot;, then the product has been added Manually by the User.
If unchecked, then the product is coming from &quot;Generate Quote&quot; functionality of RenMaint quotes.</description>
        <label>Added Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Maint_Amount__c</fullName>
        <formula>if (Term__c&gt;=12,(Extended_Price__c/ Term__c)*12,if(Term__c&gt;0,Extended_Price__c * ( 12/Term__c ),0))</formula>
        <label>Annual Maint Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annualized_Maint__c</fullName>
        <formula>Unit_Price__c  *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Product_Discounts__c</fullName>
        <formula>/*if ( RIGHT(Part_Number__c, 2)=&apos;M1&apos;,
&apos;&apos;,
TEXT(Discount_Percent__c*100) &amp; &apos; %&apos;
)
*/
/*IF( Base_Price__c &gt;0,
IF ( RIGHT(Part_Number__c, 2)=&apos;M1&apos;,
&apos;&apos;,
IF(Quote.RecordType.Name = &apos;IP - Tensilica Quote&apos;, IF(Discount_Percent__c = 0,&apos;&apos;, SUBSTITUTE(TEXT(ROUND(Discount_Percent__c*100,2)) &amp; &apos; %&apos; ,&apos;-.&apos;,&apos;-0.&apos;)),
IF(Discount_Percent__c&gt;0,TEXT( ROUND(Discount_Percent__c*100,2)) &amp; &apos; %&apos;,&apos;&apos;))
)
,&apos;&apos;)*/

IF( Base_Price__c &gt;0,
IF ( RIGHT(Part_Number__c, 2)=&apos;M1&apos;,
&apos;&apos;,
IF(Discount_Percent__c = 0,&apos;&apos;, SUBSTITUTE(TEXT(ROUND(Discount_Percent__c*100,2)) &amp; &apos; %&apos; ,&apos;-.&apos;,&apos;-0.&apos;))
)
,&apos;&apos;)</formula>
        <label>Base Product Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Product_Extended_Price__c</fullName>
        <formula>VALUE(if ( RIGHT(Part_Number__c, 2)=&apos;M1&apos;,
&apos;&apos;,TEXT(Extended_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Product Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Product_List_Price__c</fullName>
        <formula>VALUE(if ( RIGHT(Part_Number__c, 2)=&apos;M1&apos;,
&apos;&apos;,TEXT(Base_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Product List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIB_Configuration_Id__c</fullName>
        <label>CIB Configuration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COP_Integration_Id__c</fullName>
        <label>COP Integration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Price__c</fullName>
        <label>Converted Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Product__c</fullName>
        <label>Customer Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>ROUND(( Term__c  * 365)/12,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Materials_Type__c</fullName>
        <formula>Product2.Alternate_Name__c</formula>
        <label>Design Materials Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Term__c</fullName>
        <description>Field is specific to Tensilica Term Product.</description>
        <label>Design Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Disc Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Sale_Date__c</fullName>
        <label>End Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Support_Date__c</fullName>
        <label>End Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Sale__c</fullName>
        <formula>if (right( Part_Number__c ,2)=&apos;M1&apos;, 
if (Product2.Parent_Product__r.End_of_Sale__c &lt; Expected_Ship_Date__c, TEXT(DAY(Product2.Parent_Product__r.End_of_Sale__c)) &amp; &apos;/&apos; &amp; TEXT(MONTH(Product2.Parent_Product__r.End_of_Sale__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Product2.Parent_Product__r.End_of_Sale__c)),&apos;&apos;), 
if( Product2.End_of_Sale__c &lt; Expected_Ship_Date__c, TEXT(DAY(Product2.End_of_Sale__c)) &amp; &apos;/&apos; &amp; TEXT(MONTH(Product2.End_of_Sale__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Product2.End_of_Sale__c)),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Ship_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Price_Curr__c</fullName>
        <formula>Quote.Quote_Currency__r.Symbol__c &amp; &apos; &apos;&amp; IF(Extended_Price__c&lt;0,&quot;-&quot;,&quot;&quot;) &amp; IF(ABS(Extended_Price__c) &gt;= 1000000, 
TEXT(FLOOR(round(ABS(Extended_Price__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
ABS(Extended_Price__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(ABS(Extended_Price__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(ABS(Extended_Price__c),0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price_Without_Disc__c</fullName>
        <description>Extended price without discount. It factors all the parameters like term, quantity etc but not discount.</description>
        <formula>IF( Not(ISBLANK(Extended_Price__c)), IF( ISBLANK( Term__c ) , Base_Price__c * Quantity , Base_Price__c * Quantity*Term__c/12 ),0)</formula>
        <label>Extended Price Without Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <description>Extended Price calculated by formula (List Price – (disc%)) * Qty</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <label>Host Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Host_Id__c</fullName>
        <label>Host Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Number_New__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price_Curr__c</fullName>
        <formula>Quote.Quote_Currency__r.Symbol__c &amp; &apos; &apos; &amp; IF(Base_Price__c &gt;= 1000000, TEXT(FLOOR(round(Base_Price__c,0) / 1000000)) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
IF( Base_Price__c &gt;= 1000, RIGHT(TEXT(FLOOR(round(Base_Price__c,0) / 1000)), 3) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(Base_Price__c,0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_End_Date__c</fullName>
        <label>Maint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maint_Product_Discount__c</fullName>
        <formula>/*If( Maint_Product__c!=null,Maint_Product__r.Discount_Percent__c,
	IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),Discount_Percent__c,NULL)
	) */

/*If( Maint_Product__c!=null,IF(Maint_Product__r.Discount_Percent__c&gt;0,TEXT(Round(Maint_Product__r.Discount_Percent__c*100,2)) &amp; &apos; %&apos;,&apos;&apos;), 
IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),IF(Discount_Percent__c&gt;0,TEXT(Round(Discount_Percent__c*100,2)) &amp; &apos; %&apos;,&apos;&apos;),&apos;&apos;) 
)*/

If(Maint_Product__c!=null,
IF(Maint_Product__r.Discount_Percent__c = 0,&apos;&apos;, SUBSTITUTE(TEXT(ROUND(Maint_Product__r.Discount_Percent__c*100,2)) &amp; &apos; %&apos; ,&apos;-.&apos;,&apos;-0.&apos;)), 
IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),
IF(Discount_Percent__c = 0,&apos;&apos;, SUBSTITUTE(TEXT(ROUND(Discount_Percent__c*100,2)) &amp; &apos; %&apos; ,&apos;-.&apos;,&apos;-0.&apos;)),&apos;&apos;) 
)</formula>
        <label>Maint Product Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Product_Extended_Price__c</fullName>
        <formula>If( Maint_Product__c!=null,Maint_Product__r.Extended_Price__c ,
	IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),Extended_Price__c ,NULL)
	)</formula>
        <label>Maint Product Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Product_List_Price__c</fullName>
        <formula>If( Maint_Product__c!=null,Maint_Product__r.Base_Price__c,
	IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),Base_Price__c,NULL)
	)</formula>
        <label>Maint Product List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Product_Term__c</fullName>
        <formula>If( Maint_Product__c!=null,Maint_Product__r.Term__c,
	IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),Term__c,NULL)
	)</formula>
        <label>Maint Product Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Product_Unit_Price__c</fullName>
        <formula>if( Maint_Product__c!=null,Maint_Product__r.Unit_Price__c,
IF(AND(CONTAINS(Pricing_Type__c,&apos;M1&apos;),Include_in_Report__c),Unit_Price__c,NULL)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint Product Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maint Product</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Maint_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maint_Status__c</fullName>
        <label>Maint Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Disc__c</fullName>
        <formula>if(RIGHT(Part_Number__c,2)=&apos;M1&apos;,PricebookEntry.Product2.Parent_Product__r.Max_Discount__c,PricebookEntry.Product2.Max_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Disc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Function__c</fullName>
        <formula>IF( Term__c   &lt; 3, MIN( Days__c  * 2.37, 91 * 1.3), 
    IF( Term__c  &lt; 12, MIN( Days__c  * 1.3, 365  * 1),  Days__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Function</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Product__c</fullName>
        <label>Number Of Product</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product_PO_Number__c</fullName>
        <label>Original Product PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Product #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Product_CPMID__c</fullName>
        <label>Product CPMID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description_RenMaint__c</fullName>
        <formula>MID(Product2.Description,16,Find(Left(Part_Number__c,len(Part_Number__c)-2),Product2.Description)-17)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description RenMaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Display_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Extended_Price__c</fullName>
        <description>This would give the sum of Base Product Extended Price and Maint Product Extended Price</description>
        <formula>Base_Product_Extended_Price__c + Maint_Product_Extended_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_Conga__c</fullName>
        <description>This field holds the Product Description.</description>
        <formula>MID(Product2.Name,  FIND(&quot;-&quot;, Product2.Name)+2,LEN( Product2.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name (Conga)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Start_Date__c</fullName>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Record_Type__c</fullName>
        <formula>Quote.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoting_Comments__c</fullName>
        <label>Quoting Comments</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoting_Type__c</fullName>
        <label>Quoting Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <externalId>true</externalId>
        <label>ROW ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Number__c</fullName>
        <label>*Release #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenMaint_Report_Group__c</fullName>
        <description>this field is used in renewal maintenance report. There is no need to add this field on page layout.</description>
        <formula>RenMaint_System__r.SAP_Id__c+&apos;-&apos;+ RenMaint_System__r.System_Id__c+&apos;-&apos;+Software_Support_Term__c</formula>
        <label>RenMaint Report Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenMaint_System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>System</label>
        <referenceTo>RenMaint_System__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Number_of_Product__c</fullName>
        <description>Selected product starting with TENX,TENA and not ending with T should be allowed to get value for Number of Product field.</description>
        <formula>IF(AND(Quote.RecordType.Name = &apos;IP - Tensilica Quote&apos;, OR(BEGINS(Part_Number__c,&apos;TENA&apos;),BEGINS(Part_Number__c,&apos;TENX&apos;),BEGINS(Part_Number__c,&apos;TENE&apos;)),NOT(PricebookEntry.Product2.IsTensilicaTermLicenseProduct__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Number of Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Term_And_Start_Date__c</fullName>
        <description>Selected product starting with TENT should not be allowed to get value for Term, Start Date fields.</description>
        <formula>IF(AND(Quote.RecordType.Name = &apos;IP - Tensilica Quote&apos;,BEGINS(Part_Number__c,&apos;TENT&apos;)), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Term And Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Support_Term__c</fullName>
        <description>used to generate renewal maintenance reports</description>
        <formula>Text(Effective_Date__c) +&apos; to &apos;+  Text(Expiration_Date__c)</formula>
        <label>Software Support Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <label>System Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Price__c</fullName>
        <formula>ROUND(( UnitPrice  /365) * Min_Function__c  *  WAN_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <formula>if (right(Part_Number__c,2) =&apos;M1&apos;,if(Product2.Parent_Product__r.Third_Party_Flag__c,&apos;true&apos;,&apos;false&apos;), if(Product2.Third_Party_Flag__c,&apos;true&apos;,&apos;false&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Month_Format__c</fullName>
        <description>Used in 99 yr reports</description>
        <formula>IF(Maint_Product_Term__c==null, &apos;*&apos;,IF( (End_Sale_Date__c  -   Quote.Created_Date_Format__c)&lt;30,Text(Maint_Product_Term__c )+&apos;*&apos;,
IF( (End_Sale_Date__c  -  Quote.Created_Date_Format__c) &lt;365,Text(Maint_Product_Term__c )+&apos;**&apos;,Text(Maint_Product_Term__c ))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Month Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Months__c</fullName>
        <description>used for renewal maintenance report</description>
        <formula>FLOOR((Expiration_Date__c- Effective_Date__c+1)/30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Base_Price__c</fullName>
        <defaultValue>1</defaultValue>
        <label>USD Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Curr__c</fullName>
        <formula>Quote.Quote_Currency__r.Symbol__c &amp; &apos; &apos; &amp; IF(Unit_Price__c &gt;= 1000000, TEXT(FLOOR(round(Unit_Price__c,0) / 1000000)) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
IF( Unit_Price__c &gt;= 1000, RIGHT(TEXT(FLOOR(round(Unit_Price__c,0) / 1000)), 3) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(Unit_Price__c,0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violations__c</fullName>
        <label>Violations</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_Rate__c</fullName>
        <label>WAN Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAN_Type__c</fullName>
        <label>WAN Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_Year_Net_Price__c</fullName>
        <formula>Base_Price__c *   Quote.Uplift_Number__c  * (1 -  Discount_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Year Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Yr_Net_Price__c</fullName>
        <label>1 Yr Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Yr_TBL_List__c</fullName>
        <label>1 Yr TBL List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Siebel Migrated Records or Not.</description>
        <inlineHelpText>Siebel Migrated Records or Not.</inlineHelpText>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>